# PixelAnimator

./: .gitignore  2.8修改记录.md  CMakeLists.txt  complie.txt  imgui.ini  开发需求&计划.md
include/: common.h
src/: main.cpp
src/app/: App.cpp  App.h
src/core/: AppContext.cpp  AppContext.h  Project.cpp  Project.h
src/io/: ProjectSerializer.cpp  ProjectSerializer.h
src/menu/: Menu.cpp  MenuBar.h  MenuBase.cpp  MenuFactory.h  MenuItem.h  MenuManager.cpp  MenuSeparator.cpp
src/menu/menu_items/: MenuOptionBase.cpp  MenuOptionBase.h  Menu_Edit.cpp  Menu_Edit.h  Menu_File.cpp  Menu_File.h  Menu_Frame.cpp  Menu_Frame.h  Menu_Layer.cpp  Menu_Layer.h  Menu_Select.cpp  Menu_Select.h  Menu_Sprite.cpp  Menu_Sprite.h  Menu_View.cpp  Menu_View.h
src/tools/: BrushTool.cpp  BrushTool.h  EraserTool.cpp  EraserTool.h  EyedropperTool.cpp  EyedropperTool.h  FillTool.cpp  FillTool.h  Tool.h
src/ui/menu/: Menu.h  MenuBase.h  MenuFactory.h  MenuItem.cpp  MenuManager.h  MenuSeparator.h
src/ui/menu/menu_items/: Menu_Edit.cpp  Menu_Edit.h  Menu_File.cpp  Menu_File.h  Menu_Help.cpp  Menu_Help.h
src/ui/statusBar/: statusBar.cpp  statusBar.h
src/ui/windows/: HomeWindow.cpp  HomeWindow.h  ProjectWindow.cpp  ProjectWindow.h  ProjectWindow_Canvas.cpp  ProjectWindow_Palette.cpp  ProjectWindow_Timeline.cpp  ProjectWindow_ToolProperties.cpp  ProjectWindow_Tools.cpp  Window.h  WindowFactory.cpp  WindowFactory.h
